# etteytlus

./: .gitignore  LICENSE  README.md  config.env.example  install.bat  install.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  uninstall.bat  uninstall.ps1
.antigravity/skills/: iteration-cycle.md  project-context.md  tdd-workflow.md
.github/workflows/: test.yml
src/: audio_capture.py  corrector.py  pipeline.py  prompt.py  transcriber.py  web_display.py
templates/: display.html
tests/: conftest.py  test_audio_capture.py  test_corrector.py  test_prompt.py  test_transcriber.py  test_web_display.py
